# src/server/api/routes.js
@@ -49,6 +49,7 @@ import {
   apiSwitchChannel
 } from './switch.route.js';
 import { apiReboot, apiGetSystemInfo, apiGetLogs, apiUpdateHostname } from './system.routes.js';
+import { getAirGapStatus, setAirGapMode } from './system/airgap.route.js';
 import { apiOcr } from './ocr.route.js';
 import { apiWakeOnLan, apiSendWakeOnLanList, apiGetWakeOnLanList, apiAddWakeOnLan, apiDeleteWakeOnLan} from './wol.route.js'; 
 import { apiMouseJiggler, apiMouseEvent } from './mouse.route.js';
@@ -162,6 +163,8 @@ const routes = [
   { path: '/api/systeminfo', handler: apiGetSystemInfo, method: 'get' },
   { path: '/api/hostname', handler: apiUpdateHostname, method: 'post' },
   { path: '/api/logs', handler: apiGetLogs, method: 'post' },
+  { path: '/api/system/airgap', handler: getAirGapStatus, method: 'get' },
+  { path: '/api/system/airgap', handler: setAirGapMode, method: 'put' },
   { path: '/api/auth/', handler: apiEnabledAuth, method: 'post' },
   { path: '/api/auth/state', handler: apiGetAuthState, method: 'get' },
 
